football_scotland/airflow/logs/dag_id=intialization_database/run_id=manual__2024-09-29T173150.659543+0000/task_id=create_schema_in_football_scotland/attempt=1.log
[2024-09-29T17:32:31.998+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-09-29T17:32:32.040+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: intialization_database.create_schema_in_football_scotland manual__2024-09-29T17:31:50.659543+00:00 [queued]>
[2024-09-29T17:32:32.055+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: intialization_database.create_schema_in_football_scotland manual__2024-09-29T17:31:50.659543+00:00 [queued]>
[2024-09-29T17:32:32.057+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-09-29T17:32:32.079+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): create_schema_in_football_scotland> on 2024-09-29 17:31:50.659543+00:00
[2024-09-29T17:32:32.088+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=5388) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-09-29T17:32:32.090+0000] {standard_task_runner.py:63} INFO - Started process 5390 to run task
[2024-09-29T17:32:32.091+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'intialization_database', 'create_schema_in_football_scotland', 'manual__2024-09-29T17:31:50.659543+00:00', '--job-id', '2875', '--raw', '--subdir', 'DAGS_FOLDER/initialization.py', '--cfg-path', '/tmp/tmpluogsfv2']
[2024-09-29T17:32:32.093+0000] {standard_task_runner.py:91} INFO - Job 2875: Subtask create_schema_in_football_scotland
[2024-09-29T17:32:32.160+0000] {task_command.py:426} INFO - Running <TaskInstance: intialization_database.create_schema_in_football_scotland manual__2024-09-29T17:31:50.659543+00:00 [running]> on host e78fe06b6548
[2024-09-29T17:32:32.302+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='intialization_database' AIRFLOW_CTX_TASK_ID='create_schema_in_football_scotland' AIRFLOW_CTX_EXECUTION_DATE='2024-09-29T17:31:50.659543+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-09-29T17:31:50.659543+00:00'
[2024-09-29T17:32:32.305+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-09-29T17:32:32.306+0000] {sql.py:276} INFO - Executing: 
        CREATE SCHEMA IF NOT EXISTS football_scotland.scottish_premiership;
    
[2024-09-29T17:32:32.318+0000] {base.py:84} INFO - Using connection ID 'football_***_connection' for task execution.
[2024-09-29T17:32:32.332+0000] {base.py:84} INFO - Using connection ID 'football_***_connection' for task execution.
[2024-09-29T17:32:32.338+0000] {sql.py:487} INFO - Running statement: 
        CREATE SCHEMA IF NOT EXISTS football_scotland.scottish_premiership;
    , parameters: None
[2024-09-29T17:32:32.339+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-09-29T17:32:32.341+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "."
LINE 2: ...     CREATE SCHEMA IF NOT EXISTS football_scotland.scottish_...
                                                             ^

[2024-09-29T17:32:32.353+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=intialization_database, task_id=create_schema_in_football_scotland, run_id=manual__2024-09-29T17:31:50.659543+00:00, execution_date=20240929T173150, start_date=20240929T173232, end_date=20240929T173232
[2024-09-29T17:32:32.373+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 2875 for task create_schema_in_football_scotland (syntax error at or near "."
LINE 2: ...     CREATE SCHEMA IF NOT EXISTS football_scotland.scottish_...
                                                             ^
; 5390)
[2024-09-29T17:32:32.387+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-09-29T17:32:32.412+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-09-29T17:32:32.414+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
